--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ar" dir="rtl">
   <head>
     <meta charset="UTF-8" />
@@ -831,7 +831,9 @@
           });
 
           if (!response.ok) {
-            throw new Error("فشل الاتصال بـ Webhook: " + response.statusText);
+            throw new Error(
+              "فشل الاتصال بـ Webhook: " + response.statusText,
+            );
           }
 
           return await response.json();
